Fix alignment of legend icons

--- a/src/skin/options-layout.css
+++ b/src/skin/options-layout.css
@@ -102,10 +102,9 @@ button
   }
 
   .key {
-    left: auto;
-    right: auto;
-    right: 215px;
+    text-align: right;
     padding-left: 0;
+    padding-right: 215px;
   }
 }
 
